h4styles.css
/**
*
* h4styles.css : global stylesheet for Heurist Vsn 4
*
* @package     Heurist academic knowledge management system
* @link        http://HeuristNetwork.org
* @copyright   (C) 2005-2019 University of Sydney
* @author      Artem Osmakov   <artem.osmakov@sydney.edu.au>
* @author      Ian Johnson     <ian.johnson@sydney.edu.au>
* @license     http://www.gnu.org/licenses/gpl-3.0.txt GNU License 3.0
* @version     4
*/

/*
* Licensed under the GNU License, Version 3.0 (the "License"); you may not use this file except in compliance
* with the License. You may obtain a copy of the License at http://www.gnu.org/licenses/gpl-3.0.txt
* Unless required by applicable law or agreed to in writing, software distributed under the License is
* distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied
* See the License for the specific language governing permissions and limitations under the License.
*/

* {
    -moz-box-sizing: border-box;
}
/*
* {
    margin: 0;
    padding: 0;
}
*/
body {
    font-family: Helvetica,Arial,sans-serif;
    font-size: 14px;
    /* Verdana,
    font-size: 0.7em;
    font-family: Verdana,Arial,sans-serif;
    padding:10px;*/
}
.ui-widget {
    font-size: 0.8em;
}
a{
    outline: 0;
}

.logo {
    background-image: url("hclient/assets/h4logo_small.png");
    background-repeat: no-repeat !important;
    background-size: contain;
    width: 190px;
    height: 38px;
}

.db-list {
    
    -webkit-column-width:   250px;
    -moz-column-width:      250px;
    -o-column-width:        250px;
    -ms-column-width:       250px;
    column-width:           250px;
/*
    -webkit-column-rule-style:  solid;
    -moz-column-rule-style:     solid;
    -o-column-rule-style:       solid;
    -ms-column-rule-style:      solid;
    column-rule-style:      solid;*/
}

.db-list li {
    list-style: none;
    background-image: url(hclient/assets/database.png);
    background-position: left;
    background-repeat: no-repeat;
    padding-left: 30px;
    line-height: 17px;
}
.db-list li a{
    text-decoration: none;
}

/*  LAYOUT */
.ui-layout-pane {
    padding: 0 !important;
    border:none !important;
}

.ui-layout-content {
    overflow:hidden !important;
    /* height: 100%; */
    /* width: 100%; */
}

/* fix overflow issue in menu   */
.ui-selectmenu-menu > .ui-menu .ui-menu-item, .ui-selectmenu-menu > .ui-menu .ui-state-active{
    margin: 1px;
}


/* TODO: opacity=20 appears to be wrong, ? should be opacity 20 */
.ui-layout-mask {
    background: #C00 !important;
    opacity: .20 !important;
    filter: alpha(opacity=20) !important;
}

/* layout toggler icon from jquery ui */
.ui-layout-toggler {
    opacity:        .60;
    filter: alpha(opacity=60); /* IE 8,9 */
}
.ui-layout-resizer-open-hover .ui-layout-toggler, 
.ui-layout-toggler-closed,
.ui-layout-toggler-hover {
    opacity:        1;
    filter: alpha(opacity=100);
}
.ui-layout-toggler-west-open .ui-icon,
.ui-layout-toggler-east-open .ui-icon  { margin-left:   -5px; }   /*tweak arrow horizontal-center */

.ui-layout-toggler-south-open  .ui-icon{
    background-position: -64px -20px;
    width:16px;
    margin-left:12px;
}
.ui-layout-toggler-south-closed  .ui-icon{
    background-position: 0px -20px;  /* ui-icon-triangle-1-n  */
    width:16px;
    margin-left:12px;
}

#layout_panes{
    height: 100%;
    width: 100%;
}

.tab_ctrl{
    position: absolute;
}

/* -------------------------------------------- */

.logged-in-only{
    /*visibility: hidden;*/
}
.logged-out-only{
    /*visibility: visible;*/
}
.menu-or-popup{
    z-index: 990;
}

.frame_container{
    padding: 0.2em !important;
    /*
    height:100%;
    z-index:2;*/
    bottom: 0;
    position: absolute;
    top: 0;
    width: 99%;
}

iframe {
    width:100%;
    height:100%;
    border:none;
}

input[type=checkbox], input[type=radio]{
    vertical-align:-0.3em;
    margin-right:0.2em;

}

/* special input elements in editing_input */
input.rec_URL {
    text-decoration: underline;
    cursor: pointer;
    border: 1px solid rgba(0, 0, 0, 0.2);
    margin: 2px 0;
    padding: 3px;
}

input.Temporal, .list_div {
    cursor: pointer;
    border: 1px solid rgba(0, 0, 0, 0.2);
    margin: 2px 0;
    padding: 3px;
}

.entity_selector {
    cursor: hand;
    border: 1px solid rgba(0, 0, 0, 0.2);
    padding: 0px 10px 0px 30px;
    overflow-y: auto;
    line-height: 18px;
    max-height: 120px;
    height: auto;
    min-height: 20px;    
}

/* INPUT FORM ----------------------------------   */
fieldset {
    padding:5px;
    border:0;
}
.editForm > h4{
    margin:0;
}

fieldset > div, .input-row{
    padding-top:0.2em;
    display:table-row;
    /*padding-bottom:0.2em;*/
}

fieldset input:focus,
fieldset select:focus,
fieldset textarea:focus,
fieldset button:focus,
.btnset_radio:focus,
.ui-fancytree,
.outline_suppress {
    outline: none;
    outline-style:none;
    box-shadow:none;
    border-color:transparent;    
}

fieldset > div > input.text, fieldset > div > select.text, fieldset > div > .ui-selectmenu-button{
    margin-top: 0.3em;
    margin-bottom: 0.5em;
}
fieldset > div > input[type=radio]{
    vertical-align:-0.3em;
    margin: 0.5em 0.2em 0.2em 0.2em;
}
fieldset > div > input[type=checkbox], .ent_search_cb input[type=checkbox], .ent_search_cb input[type=radio]{
    margin: 0 0.5em 0 1em;
}
fieldset > div > .header,
fieldset > div > .header_narrow{
    display:table-cell;
    text-align:right;
    padding:4px 0.4em 0 0;
}
fieldset.ontop > div > .header{
    display:block;
    text-align:left;
}


fieldset > div > .header{
    width:150px;
    min-width:150px;
}
fieldset.narrow > div > .header{
    width:60px;
    min-width:60px;
}

fieldset > div > .input-cell{
    display:table-cell;
    min-width:120px;
    padding-bottom:0.5em;
}
fieldset.ontop > div > .input-cell{
    display:block;
}
.input-cell > input{
    margin-right: 0.4em;
}

div.input-div{
    padding-right:20px;
    padding-bottom:2px;
}
/* ... */

